# docs/swagger.yaml
@@ -869,6 +869,11 @@ paths:
       - application/json
       description: Create a new user
       parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Request body
         in: body
         name: request
@@ -888,6 +893,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_LuisMarchio03_acim-backend_handler_user.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create User
       tags:
       - User
